[tool.poetry]
name = "tea-client"
version = "0.1.0"
description = ""
authors = ["vprusso <vincentrusso1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
pydantic = "^2.9.2"
tea = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
